fixed low contrast on contact cards

--- a/css/root-style.css
+++ b/css/root-style.css
@@ -261,7 +261,6 @@ section h1 {
 
 .contact-items {
     padding: 20px;
-    /* border: 0.5px solid gray; */
     border-radius: 5px;
     flex-grow: 2;
     height: 50px;
@@ -270,6 +269,10 @@ section h1 {
     vertical-align: bottom;
     margin: 0 10px;
     font-size: 2rem;
+}
+
+.dark .contact-items {
+    background-color: #222222;
 }
 
 /*===============
